<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
	<groupId>com.tobesoft</groupId>
	<artifactId>edupack_egov</artifactId>
	<packaging>war</packaging>
	<version>0.0.1-SNAPSHOT</version>
	<name>edupack_egov</name>
	<url>http://www.egovframe.go.kr</url>

	<properties>
	    <spring.maven.artifact.version>4.1.2.RELEASE</spring.maven.artifact.version>
		<egovframework.rte.version>3.10.0</egovframework.rte.version>
		<jdk.version>1.8</jdk.version>
		<slf4j.version>1.7.5</slf4j.version>
		<logback.version>1.2.3</logback.version>
        <encoding>UTF-8</encoding>
        <nexacro.uiadapter.version>1.0.1-SNAPSHOT</nexacro.uiadapter.version>
	</properties>

	<repositories>
		<repository>
            <id>tobesoft</id>
            <url>http://mangosteen.tobesoft.co.kr/nexus/repository/maven-public/</url>
            <releases>
            </releases>
            <snapshots>
            </snapshots>
        </repository>
        <!-- 
		<repository>
			<id>mvn</id>
			<url>http://repo1.maven.org/maven2/</url>
			<releases>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		 -->
		<repository>
			<id>mvn2</id>
			<url>https://repo1.maven.org/maven2/</url>
			<releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
            </snapshots>
		</repository>
		<!-- 
		<repository>
			<id>egovframe</id>
			<url>http://www.egovframe.go.kr/maven/</url>
			<releases>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		 -->
		<repository>
			<id>egovframe2</id>
			<url>http://maven.egovframe.kr:8080/maven/</url>
			<releases>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
	</repositories>
	
	<pluginRepositories>
	    <pluginRepository>
		    <releases>
				<updatePolicy>never</updatePolicy>
		    </releases>
		    <snapshots>
				<enabled>false</enabled>
		    </snapshots>
		    <id>central</id>
		    <name>Central Repository</name>
			<url>https://repo.maven.apache.org/maven2</url>
	    </pluginRepository>	
	</pluginRepositories>
	
	<dependencies>
	   <!--  LOGGING LIBRARY  -->
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
        </dependency>
                
		<!-- 표준프레임워크 실행환경 -->
        <dependency>
		    <groupId>egovframework.rte</groupId>
		    <artifactId>egovframework.rte.ptl.mvc</artifactId>
		    <version>${egovframework.rte.version}</version>
		    <exclusions>
		    	<exclusion>
		    		<artifactId>commons-logging</artifactId>
		    		<groupId>commons-logging</groupId>
		    	</exclusion>
		    </exclusions>
        </dependency>
        <dependency>
		    <groupId>egovframework.rte</groupId>
		    <artifactId>egovframework.rte.psl.dataaccess</artifactId>
		    <version>${egovframework.rte.version}</version>
		    <exclusions>
		    	<exclusion>
		    		<artifactId>log4j-core</artifactId>
		    		<groupId>org.apache.logging.log4j</groupId>
		    	</exclusion>
		    	<exclusion>
		    		<artifactId>log4j-slf4j-impl</artifactId>
		    		<groupId>org.apache.logging.log4j</groupId>
		    	</exclusion>
		    	<exclusion>
		    		<artifactId>log4j-over-slf4j</artifactId>
		    		<groupId>org.slf4j</groupId>
		    	</exclusion>
		    </exclusions>
        </dependency>
        <dependency>
			<groupId>egovframework.rte</groupId>
			<artifactId>egovframework.rte.fdl.idgnr</artifactId>
			<version>${egovframework.rte.version}</version>
		</dependency>
       	<dependency>
			<groupId>egovframework.rte</groupId>
			<artifactId>egovframework.rte.fdl.property</artifactId>
			<version>${egovframework.rte.version}</version>
		</dependency>
		
		<!-- nexacroN UIADAPTER -->
		<!-- 
         -->
        <dependency>
            <groupId>com.nexacro</groupId>
            <artifactId>uiadapter-spring-core</artifactId>
            <version>${nexacro.uiadapter.version}</version>
        </dependency>
        
        <dependency>
            <groupId>com.nexacro</groupId>
            <artifactId>uiadapter-spring-dataaccess</artifactId>
            <version>${nexacro.uiadapter.version}</version>
        </dependency>
        
        <dependency>
            <groupId>com.nexacro</groupId>
            <artifactId>uiadapter-spring-excel</artifactId>
            <version>${nexacro.uiadapter.version}</version>
        </dependency>
        <!-- nexacroN UIADAPTER -->
        
        <!-- check validate -->
        <dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-validator</artifactId>
            <version>4.3.2.Final</version>
        </dependency>
        
        <dependency>
		    <groupId>javax.servlet</groupId>
		    <artifactId>servlet-api</artifactId>
		    <scope>provided</scope>
		    <version>2.5</version>
        </dependency>

        <dependency>
		    <groupId>javax.servlet</groupId>
		    <artifactId>jstl</artifactId>
		    <version>1.2</version>
        </dependency>

        <dependency>
		    <groupId>taglibs</groupId>
		    <artifactId>standard</artifactId>
		    <version>1.1.2</version>
        </dependency>

		<dependency>
	        <groupId>org.antlr</groupId>
	        <artifactId>antlr</artifactId>
	        <version>3.5</version>
   		</dependency>

		<dependency>
			<groupId>org.hsqldb</groupId>
			<artifactId>hsqldb</artifactId>
			<version>1.8.0.10</version>
		</dependency>
        
        <dependency>
            <groupId>commons-dbcp</groupId>
            <artifactId>commons-dbcp</artifactId>
            <version>1.4</version>
        </dependency>
        
        <dependency>
            <groupId>com.googlecode.log4jdbc</groupId>
            <artifactId>log4jdbc</artifactId>
            <version>1.2</version>
            <exclusions>
                <exclusion>
                    <artifactId>slf4j-api</artifactId>
                    <groupId>org.slf4j</groupId>
                </exclusion>
            </exclusions>
        </dependency>
		
		<dependency>
		  <groupId>commons-fileupload</groupId>
		  <artifactId>commons-fileupload</artifactId>
		  <version>1.4</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client -->
		<dependency>
		    <groupId>org.mariadb.jdbc</groupId>
		    <artifactId>mariadb-java-client</artifactId>
		    <version>2.7.5</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-math3 -->
		<dependency>
		    <groupId>org.apache.commons</groupId>
		    <artifactId>commons-math3</artifactId>
		    <version>3.6.1</version>
		</dependency>

		<!-- 파일 다운로드 압축  -->
		<dependency>
		    <groupId>org.apache.commons</groupId>
		    <artifactId>commons-compress</artifactId>
		    <version>1.14</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java 
		<dependency>
		    <groupId>mysql</groupId>
		    <artifactId>mysql-connector-java</artifactId>
		    <version>8.0.27</version>
		</dependency>
		-->
        <!-- mysql이나 oracle 필요시 사용 -->        
        <!--
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>5.1.31</version>
        </dependency>

        <dependency>
            <groupId>ojdbc</groupId>
            <artifactId>ojdbc</artifactId>
            <version>14</version>
            <scope>system</scope>
            <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/ojdbc-14.jar</systemPath>
        </dependency>
        -->
	</dependencies>
	<!-- 0123456789 0123456789 -->
	<build>
        <defaultGoal>install</defaultGoal>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
            <resource>
                <directory>src/main/java</directory>
                <excludes>
                    <exclude>**/*.java</exclude>
                </excludes>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
        </resources>
        <directory>${basedir}/target</directory>
	    <extensions>
	      <extension>
	        <groupId>org.apache.maven.archetype</groupId>
	        <artifactId>archetype-packaging</artifactId>
	        <version>2.2</version>
	      </extension>
	    </extensions>
        <finalName>${project.artifactId}-${project.version}</finalName>
        <pluginManagement>
           <plugins>
		        <plugin>
		          <groupId>org.apache.maven.plugins</groupId>
		          <artifactId>maven-archetype-plugin</artifactId>
		          <version>3.2.0</version>
		          <extensions>true</extensions>
		        </plugin>
                <plugin>
                    <groupId>org.apache.tomcat.maven</groupId>
                    <artifactId>tomcat8-maven-plugin</artifactId>
                    <version>2.2</version>
                    <configuration>
                        <port>80</port>
                        <path>/</path>
                        <systemProperties>
                            <JAVA_OPTS>-Xms256m -Xmx768m -XX:MaxPermSize=512m</JAVA_OPTS>
                        </systemProperties>
                    </configuration>
                </plugin>
                <!-- deploy plugin 설정 -->
				<plugin>
				   <groupId>org.sonatype.plugins</groupId>
				   <artifactId>nexus-staging-maven-plugin</artifactId>
				   <version>1.5.1</version>
				   <executions>
				      <execution>
				         <id>default-deploy</id>
				         <phase>deploy</phase>
				         <goals>
				            <goal>deploy</goal>
				         </goals>
				      </execution>
				   </executions>
				   <configuration>
				      <serverId>dev-tobesoft-snapshots</serverId>
				      <skipStaging>true</skipStaging>
				   </configuration>
				</plugin>
                <!-- Compiler 설정 -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                    <configuration>
                        <source>${jdk.version}</source>
                        <target>${jdk.version}</target>
                        <fork>true</fork>
                        <meminitial>1024m</meminitial>
                        <maxmem>1024m</maxmem>
                        <encoding>${encoding}</encoding>
                    </configuration>
                </plugin>
                <!-- war 설정 
                <plugin>
                    <artifactId>maven-war-plugin</artifactId>
                    <version>2.2</version>
                    <configuration>
                        <webXml>src/main/webapp/WEB-INF/web.xml</webXml>
                    </configuration>
                </plugin>
                -->
				<plugin>
				    <groupId>org.apache.maven.plugins</groupId>
				    <artifactId>maven-deploy-plugin</artifactId>
				    <version>3.0.0-M1</version>
                    <configuration>
                        <forkCount>1</forkCount>
                        <reuseForks>false</reuseForks>
                    </configuration>
				    <executions>
				        <execution>
				            <id>deploy-jar-file</id>
				            <phase>deploy</phase>
				            <goals>
				                <goal>deploy-file</goal>
				            </goals>
				        </execution>
				    </executions>
				</plugin>
				<!-- 
				<plugin>
	                  <groupId>org.apache.maven.plugins</groupId>
	                  <artifactId>maven-surefire-plugin</artifactId>
	                  <version>2.22.0</version>
	                  <configuration>
	                      <forkCount>3</forkCount>
	                      <reuseForks>true</reuseForks>
	                  </configuration>
                </plugin>
                 -->
                <plugin>
                    <groupId>org.maven.ide.eclipse</groupId>
                    <artifactId>lifecycle-mapping</artifactId>
                    <version>0.9.9-SNAPSHOT</version>
                    <configuration>
                        <mappingId>generic</mappingId>
                        <configurators></configurators>
                        <mojoExecutions></mojoExecutions>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>hibernate3-maven-plugin</artifactId>
                    <version>2.1</version>
                    <configuration>
                        <components>
                            <component>
                                <name>hbm2ddl</name>
                                <implementation>annotationconfiguration</implementation>
                            </component>
                        </components>
                    </configuration>
                    <dependencies>
                        <dependency>
                            <groupId>org.hsqldb</groupId>
                            <artifactId>hsqldb</artifactId>
                            <version>2.3.2</version>
                        </dependency>
                    </dependencies>
                </plugin>
                <!-- EMMA -->
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>emma-maven-plugin</artifactId>
                    <version>1.0-alpha-3</version>
                </plugin>
                <!-- PMD manven plugin -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-pmd-plugin</artifactId>
                    <version>3.1</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <!-- EMMA -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <skipTests>true</skipTests>
                    <forkMode>once</forkMode>
                    <reportFormat>xml</reportFormat>
                    <excludes>
                        <exclude>**/Abstract*.java</exclude>
                        <exclude>**/*Suite.java</exclude>
                    </excludes>
                    <includes>
                        <include>**/*Test.java</include>
                    </includes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>emma-maven-plugin</artifactId>
                <inherited>true</inherited>
            </plugin>
            <!-- JavaDoc -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.9.1</version>
            </plugin>
        </plugins>
    </build>
    <reporting>
        <outputDirectory>${basedir}/target/site</outputDirectory>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>2.7</version>
                <reportSets>
                    <reportSet>
                        <id>sunlink</id>
                        <reports>
                            <report>javadoc</report>
                        </reports>
                        <inherited>true</inherited>
                        <configuration>
                            <links>
                                <link>http://docs.oracle.com/javase/6/docs/api/</link>
                            </links>
                        </configuration>
                    </reportSet>
                </reportSets>
            </plugin>
            <!-- JUnit Test Results & EMMA Coverage Reporting -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>emma-maven-plugin</artifactId>
                <inherited>true</inherited>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>surefire-report-maven-plugin</artifactId>
                <inherited>true</inherited>
                <reportSets>
                    <reportSet>
                        <reports>
                            <report>report-only</report>
                        </reports>
                    </reportSet>
                </reportSets>
            </plugin>
            <!-- Generating JavaDoc Report -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <configuration>
                    <minmemory>128m</minmemory>
                    <maxmemory>512m</maxmemory>
                    <encoding>${encoding}</encoding>
                    <docencoding>${encoding}</docencoding>
                    <charset>${encoding}</charset>
                </configuration>
            </plugin>
            <!-- Generating Java Source in HTML -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jxr-plugin</artifactId>
                <configuration>
                    <inputEncoding>${encoding}</inputEncoding>
                    <outputEncoding>${encoding}</outputEncoding>
                    <linkJavadoc>true</linkJavadoc>
                    <javadocDir>apidocs</javadocDir>
                </configuration>
            </plugin>
        </plugins>
    </reporting>
</project>
